# odf-ocr

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: architecture.md
electron/: main.js  package.json  preload.js
scripts/: start_server.py
src/odf_ocr/: __init__.py  layout.py  ocr_engine.py  pipeline.py  postprocessing.py  preprocessing.py  server.py
tests/: test_postprocessing.py  test_preprocessing.py
